# gpu-screen-recorder-qt

./: CMakeLists.txt  LICENSE  README.md  RootOverlayWindow.cpp  RootOverlayWindow.h  RootOverlayWindow.ui  main.cpp
.cache/clangd/index/: MainPage.cpp.34AE07B31D2E1B44.idx  MainPage.h.6A6784C8669E6ADF.idx  RootOverlayWindow.cpp.3129BAFBF41B7D77.idx  RootOverlayWindow.h.A4E409D28C9FC9FE.idx  main.cpp.F5FE4F56DD564170.idx
include/: GsrDbus.h  MainPage.h  RootOverlayWindow.h  SettingsPage.h  overlaywindow.h  utils.h
src/: GsrDbus.cpp  MainPage.cpp  RootOverlayWindow.cpp  SettingsPage.cpp  main.cpp  overlaywindow.cpp  utils.cpp
ui/: MainPage.ui  RootOverlayWindow.ui  SettingsPage.ui  overlaywindow.ui
